# hydragrow-frontend

./: package-lock.json  package.json  vite.config.ts
public/: firebase-messaging-sw.js
src/: App.css  App.tsx  firebase.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  http_client.rs  lib.rs  main.rs  models.rs  notification.rs  valve_guard.rs  water_sequence.rs  ws_client.rs
src/components/layout/: MainLayout.tsx
src/components/ui/: AccordionSection.tsx  ControlCard.tsx  FsmStatusBadge.tsx  InputGroup.tsx  SensorBentoCard.tsx  SubCard.tsx  Switch.tsx
src/context/: DeviceContext.tsx
src/hooks/: useCropSeason.ts  useDeviceControl.ts  useDeviceSensor.ts  useFCM.ts  useSystemAlerts.ts
src/pages/: Analytics.tsx  BlockchainHistory.tsx  ControlPanel.tsx  CropSeasons.tsx  Dashboard.tsx  Settings.tsx  SystemFlow.tsx  SystemLog.tsx
src/types/: models.ts
