[package]
name = "hydragrow-frontend"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "hydragrow_frontend_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2.4.2"

# 1. Thêm plugin HTTP của Tauri
tauri-plugin-http = "2"

# 2. Giữ nguyên cấu hình này để WebSocket không bị lỗi
tokio-tungstenite = { version = "0.28.0", features = [
  "rustls-tls-webpki-roots",
] }

futures-util = "0.3.32"
tokio = "1.50.0"
chrono = "0.4.44"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2.5.0"
tauri-plugin-dialog = "2.7.0"
